Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p>Windows application: <a href="https://github.com/TwitchPlayer/TwitchPlayer/releases">URL</a>.
 It requires livestreamer installed: <a href="http://docs.livestreamer.io/install.html#windows-binaries">URL</a>. 
-And Chrome externtion: .</p>
+And Chrome externtion: <a href="https://github.com/ink-well/Twitch-Ext/releases">URL</a> .</p>
 
 <p>Now, you are ready to watch your favorire streams using VLC without lags. You just need to right-click stream link and choose "Watch in VLC"</p>
       </section>
