--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a id="3-livestreamer" class="anchor" href="#3-livestreamer" aria-hidden="true"><span class="octicon octicon-link"></span></a>3. <a href="http://docs.livestreamer.io/install.html#windows-binaries">livestreamer</a>.</h2>
 
 <p>You will get opened config file after instalation of livestreamer:
-<img src="https://github.com/TwitchPlayer/TwitchPlayer.github.io/blob/master/images/Capture1.png" alt="Img">
+<img src="images/Capture1.png" alt="Livestreamerrc">
 Uncomment(delete '#' at the beginning) string that paths to VLC and add <code>--file-caching=10000</code> to the end of it.
 Then add <code>hls-segment-threads=4</code> to the end of the file.</p>
 
@@ -54,7 +54,7 @@ Then add <code>hls-segment-threads=4</code> to the end of the file.</p>
 Drag and drop downloaded CRX file onto the Extensions page to install it.</p>
 
 <h1>
-<a id="now-you-are-ready-to-watch-your-favorire-streams-using-vlc-without-lags-you-just-need-to-right-click-stream-link-and-choose-watch-in-vlc" class="anchor" href="#now-you-are-ready-to-watch-your-favorire-streams-using-vlc-without-lags-you-just-need-to-right-click-stream-link-and-choose-watch-in-vlc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Now, you are ready to watch your favorire streams using VLC without lags. You just need to right-click stream link and choose "Watch in VLC"</h1>
+<a id="now-you-are-ready-to-watch-your-favorire-streams-using-vlc-without-lags-you-just-need-to-right-click-stream-link-and-choose-watch-in-vlc" class="anchor" href="#now-you-are-ready-to-watch-your-favorire-streams-using-vlc-without-lags-you-just-need-to-right-click-stream-link-and-choose-watch-in-vlc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Now, you are ready to watch your favorire streams using VLC without lags. You just need to right-click stream link and choose "Watch in VLC"<img src="images/Capture2.png" alt="Watch in VLC"></h1>
       </section>
     </div>
 
