--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ Then add <code>hls-segment-threads=4</code> to the end of the file.</p>
 Drag and drop downloaded CRX file onto the Extensions page to install it.</p>
 
 <h1>
-<a id="now-you-are-ready-to-watch-your-favorire-streams-using-vlc-without-lags-you-just-need-to-right-click-stream-link-and-choose-watch-in-vlc" class="anchor" href="#now-you-are-ready-to-watch-your-favorire-streams-using-vlc-without-lags-you-just-need-to-right-click-stream-link-and-choose-watch-in-vlc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Now, you are ready to watch your favorire streams using VLC without lags. You just need to right-click stream link and choose "Watch in VLC"<img src="images/Capture2.png" alt="Watch in VLC"></h1>
+<a id="now-you-are-ready-to-watch-your-favorire-streams-using-vlc-without-lags-you-just-need-to-right-click-stream-link-and-choose-watch-in-vlc" class="anchor" href="#now-you-are-ready-to-watch-your-favorire-streams-using-vlc-without-lags-you-just-need-to-right-click-stream-link-and-choose-watch-in-vlc" aria-hidden="true"><span class="octicon octicon-link"></span></a>Now, you are ready to watch your favorire streams using VLC without lags. You just need to right-click stream link and choose "Watch in VLC"</h1>
+<img src="images/Capture2.png" alt="Watch in VLC">
       </section>
     </div>
 
