Added config file name

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <h2>
 <a id="3-livestreamer" class="anchor" href="#3-livestreamer" aria-hidden="true"><span class="octicon octicon-link"></span></a>3. <a href="http://docs.livestreamer.io/install.html#windows-binaries">livestreamer</a>.</h2>
 
-<p>You will get opened config file after instalation of livestreamer:
+<p>You will get opened config file after instalation of livestreamer(livestreamerrc):
 <img src="images/Capture1.png" alt="Livestreamerrc">
 Uncomment(delete '#' at the beginning) string that paths to VLC and add <code>--file-caching=10000</code> to the end of it.
 Then add <code>hls-segment-threads=4</code> to the end of the file.</p>
